--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-    
+<html lang="en">   
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portofolio</title>
   </head>
-
   <body>
      <!-- Navigation Bar -->
     <nav class="navbar fixed-top">
@@ -24,7 +22,6 @@
             <a href="#contact">Contact</a>
         </div>
     </nav>
-
     <section id="home">
       <!-- Home Section -->
       <div class="container">
@@ -35,12 +32,10 @@
         </div>  
       </div>
     </section>
-
     <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#fdfce8" fill-opacity="1" d="M0,128L24,117.3C48,107,96,85,144,117.3C192,149,240,235,288,229.3C336,224,384,128,432,117.3C480,107,528,181,576,229.3C624,277,672,299,720,277.3C768,256,816,192,864,154.7C912,117,960,107,1008,128C1056,149,1104,203,1152,197.3C1200,192,1248,128,1296,106.7C1344,85,1392,107,1416,117.3L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z">
       </path>
     </svg>
-    
     <section id="about">
       <!-- About Section -->
       <div class="container introduction">
@@ -55,7 +50,6 @@
         </div>
       </div>
     </section>
-
     <section id="skills">
       <!-- Skills Section -->
       <div class="container skills">
@@ -71,12 +65,10 @@
         </div>
       </div>
     </section>
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#997950" fill-opacity="1" d="M0,160L30,176C60,192,120,224,180,202.7C240,181,300,107,360,85.3C420,64,480,96,540,144C600,192,660,256,720,245.3C780,235,840,149,900,117.3C960,85,1020,107,1080,138.7C1140,171,1200,213,1260,218.7C1320,224,1380,192,1410,176L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
       </path>
     </svg>
-
     <section id="contact" class="footer">
       <!-- Contact Section -->
       <div class="container contact">
@@ -88,7 +80,7 @@
             <ul>
              <p><a href="mailto:estianindyah@gmail.com"><i class="fas fa-envelope"></i> estianindyah@gmail.com</a></p>
              <p><a href="https://www.instagram.com/sxrryae"><i class="fab fa-instagram"></i> @sxrryae</a></p>
-             <p><a href="tel:+6282143709055"><i class="fab fa-whatsapp"></i> +62 821-4370-9055</a></p>
+             <p><a href="https://whatsapp.com/dl/6282143709055"><i class="fab fa-whatsapp"></i> +62 821-4370-9055</a></p>
             </ul>
           </div>
         </div>
