--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <ul>
              <p><a href="mailto:estianindyah@gmail.com"><i class="fas fa-envelope"></i> estianindyah@gmail.com</a></p>
              <p><a href="https://www.instagram.com/sxrryae"><i class="fab fa-instagram"></i> @sxrryae</a></p>
-             <p><a href="https://whatsapp.com/dl/6282143709055"><i class="fab fa-whatsapp"></i> +62 821-4370-9055</a></p>
+             <p><a href="https://wa.me/6282143709055"><i class="fab fa-whatsapp"></i> +62 821-4370-9055</a></p>
             </ul>
           </div>
         </div>
@@ -99,3 +99,4 @@
     -->
   </body>
 </html>
+
